# prometheus-mcp-server-py

./: Dockerfile  README.md  main.py  pyproject.toml  smithery.yaml
prometheus_mcp/: __init__.py  cli.py
prometheus_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
